[package]
name = "tbuck"
# Remember to update version number in README.md too, in the Usage section.
version = "1.1.0"
authors = ["Drake Tetreault <ekardnt@ekardnt.com>"]
edition = "2018"
license = "CC0-1.0"
homepage = "https://github.com/EkardNT/tbuck"
repository = "https://github.com/EkardNT/tbuck"
readme = "README.md"
keywords = ["cli", "timeseries"]
categories = ["command-line-utilities", "visualization"]
description = "A command line tool for bucketing time-series text data"

[dependencies]
chrono = "0.4"
clap = "2"
hashbrown = "0.1"
regex = "1"